//! # DNI-CLUS-01 - Automated Cell Profiling Agent
//!
//! This module implements the Cell Clustering Agent for the RAN Intelligence Platform.
//! It provides automated cell profiling through unsupervised clustering of PRB utilization
//! patterns and generates strategic insights for network optimization.
//!
//! ## Features
//!
//! - **Unsupervised Clustering**: K-Means, DBSCAN, and hybrid clustering algorithms
//! - **PRB Utilization Analysis**: 24-hour pattern analysis with 30-day aggregation
//! - **Cell Behavior Profiling**: Automated classification of cell behavior patterns
//! - **Strategic Insights**: Actionable recommendations for network optimization
//! - **Real-time Updates**: Incremental clustering updates for streaming data
//! - **Visualization**: Interactive cluster visualization and analysis
//!
//! ## Architecture
//!
//! ```text
//! PRB Data → Feature Extraction → Clustering → Profiling → Insights
//!   (24h)        (Statistical)    (K-Means)    (Auto)    (Strategic)
//! ```
//!
//! ## Usage
//!
//! ```rust
//! use cell_clustering_agent::CellClusteringAgent;
//!
//! let agent = CellClusteringAgent::new()?;
//! let results = agent.perform_clustering(prb_vectors, config).await?;
//! ```

pub mod clustering;
pub mod features;
pub mod models;
pub mod service;
pub mod proto;
pub mod profiling;
pub mod visualization;

use anyhow::Result;
use chrono::{DateTime, Utc};
use serde::{Deserialize, Serialize};
use std::collections::HashMap;
use uuid::Uuid;

pub use clustering::*;
pub use features::*;
pub use models::*;
pub use service::*;
pub use profiling::*;
pub use visualization::*;

/// Main Cell Clustering Agent
pub struct CellClusteringAgent {
    pub id: Uuid,
    pub session_id: String,
    pub clustering_engine: ClusteringEngine,
    pub profiling_engine: ProfilingEngine,
    pub visualization_engine: VisualizationEngine,
    pub created_at: DateTime<Utc>,
}

impl CellClusteringAgent {
    /// Create a new Cell Clustering Agent
    pub fn new() -> Result<Self> {
        let id = Uuid::new_v4();
        let session_id = format!("cell_clustering_{}", id);
        
        Ok(Self {
            id,
            session_id,
            clustering_engine: ClusteringEngine::new()?,
            profiling_engine: ProfilingEngine::new()?,
            visualization_engine: VisualizationEngine::new()?,
            created_at: Utc::now(),
        })
    }

    /// Perform cell clustering analysis
    pub async fn perform_clustering(
        &mut self,
        prb_vectors: Vec<PrbUtilizationVector>,
        config: ClusteringConfig,
    ) -> Result<ClusteringResult> {
        log::info!("Starting cell clustering analysis with {} cells", prb_vectors.len());
        
        // Extract features from PRB utilization vectors
        let features = self.extract_features(&prb_vectors)?;
        
        // Perform clustering
        let clusters = self.clustering_engine.cluster(&features, &config).await?;
        
        // Generate cell profiles
        let profiles = self.profiling_engine.generate_profiles(&prb_vectors, &clusters).await?;
        
        // Calculate clustering metrics
        let metrics = self.clustering_engine.calculate_metrics(&features, &clusters)?;
        
        log::info!("Clustering completed: {} clusters, {} cells", clusters.len(), prb_vectors.len());
        
        Ok(ClusteringResult {
            session_id: self.session_id.clone(),
            clusters,
            profiles,
            metrics,
            timestamp: Utc::now(),
        })
    }

    /// Extract features from PRB utilization vectors
    fn extract_features(&self, prb_vectors: &[PrbUtilizationVector]) -> Result<Vec<FeatureVector>> {
        log::info!("Extracting features from {} PRB vectors", prb_vectors.len());
        
        let mut features = Vec::new();
        
        for vector in prb_vectors {
            let feature_vector = FeatureVector::from_prb_vector(vector)?;
            features.push(feature_vector);
        }
        
        log::info!("Extracted {} feature vectors", features.len());
        Ok(features)
    }

    /// Generate strategic insights from clustering results
    pub async fn generate_insights(
        &self,
        results: &ClusteringResult,
        insight_type: &str,
        time_horizon: &str,
    ) -> Result<Vec<ClusterInsight>> {
        log::info!("Generating {} insights with {} time horizon", insight_type, time_horizon);
        
        let mut insights = Vec::new();
        
        for cluster in &results.clusters {
            let insight = self.generate_cluster_insight(cluster, insight_type, time_horizon)?;
            insights.push(insight);
        }
        
        log::info!("Generated {} insights", insights.len());
        Ok(insights)
    }

    /// Generate insight for a specific cluster
    fn generate_cluster_insight(
        &self,
        cluster: &Cluster,
        insight_type: &str,
        time_horizon: &str,
    ) -> Result<ClusterInsight> {
        let mut recommendations = Vec::new();
        let mut key_findings = Vec::new();
        
        // Analyze cluster characteristics
        let characteristics = &cluster.characteristics;
        
        // Generate findings based on behavior pattern
        match characteristics.primary_pattern.as_str() {
            "peak_morning" => {
                key_findings.push("High morning traffic pattern detected".to_string());
                recommendations.push("Consider load balancing during 8-10 AM peak hours".to_string());
            }
            "peak_evening" => {
                key_findings.push("High evening traffic pattern detected".to_string());
                recommendations.push("Optimize capacity for 17-20 PM peak hours".to_string());
            }
            "flat" => {
                key_findings.push("Consistent utilization pattern throughout the day".to_string());
                recommendations.push("Well-balanced load distribution - maintain current configuration".to_string());
            }
            "irregular" => {
                key_findings.push("Irregular traffic pattern detected".to_string());
                recommendations.push("Investigate potential interference or configuration issues".to_string());
            }
            _ => {
                key_findings.push("Unknown pattern detected".to_string());
                recommendations.push("Requires detailed analysis".to_string());
            }
        }
        
        // Add utilization-based recommendations
        if characteristics.avg_utilization > 0.8 {
            recommendations.push("High utilization detected - consider capacity expansion".to_string());
        } else if characteristics.avg_utilization < 0.2 {
            recommendations.push("Low utilization detected - consider resource optimization".to_string());
        }
        
        // Determine impact level and urgency
        let impact_level = if characteristics.avg_utilization > 0.9 {
            "critical"
        } else if characteristics.avg_utilization > 0.7 {
            "high"
        } else if characteristics.avg_utilization > 0.5 {
            "medium"
        } else {
            "low"
        };
        
        let urgency = match characteristics.anomaly_level.as_str() {
            "high" => "urgent",
            "medium" => "high",
            "low" => "medium",
            _ => "low",
        };
        
        Ok(ClusterInsight {
            cluster_id: cluster.id,
            insight_type: insight_type.to_string(),
            title: format!("Cluster {} - {} Pattern", cluster.id, characteristics.primary_pattern),
            description: format!(
                "Cluster with {} cells showing {} behavior pattern with {:.1}% average utilization",
                cluster.cell_ids.len(),
                characteristics.primary_pattern,
                characteristics.avg_utilization * 100.0
            ),
            confidence: cluster.silhouette_score,
            key_findings,
            actionable_recommendations: recommendations,
            impact_level: impact_level.to_string(),
            urgency: urgency.to_string(),
        })
    }

    /// Update clustering model with new data
    pub async fn update_clustering(
        &mut self,
        new_data: Vec<PrbUtilizationVector>,
        retrain: bool,
    ) -> Result<UpdateResult> {
        log::info!("Updating clustering model with {} new data points", new_data.len());
        
        if retrain {
            // Full retraining with new data
            log::info!("Performing full model retraining");
            // Implementation would merge old and new data, then retrain
        } else {
            // Incremental update
            log::info!("Performing incremental update");
            // Implementation would use online learning techniques
        }
        
        Ok(UpdateResult {
            status: "success".to_string(),
            message: "Model updated successfully".to_string(),
            cells_updated: new_data.len(),
            clusters_modified: 0, // Would be calculated based on actual changes
        })
    }
}

/// PRB Utilization Vector for 24-hour period
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct PrbUtilizationVector {
    pub cell_id: String,
    pub date: String,
    pub hourly_prb_utilization: Vec<f64>, // 24 values (0-100%)
    pub metadata: CellMetadata,
    pub additional_features: Vec<f64>,
}

/// Cell metadata for contextual clustering
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct CellMetadata {
    pub cell_id: String,
    pub site_id: String,
    pub technology: String,
    pub frequency_band: String,
    pub tx_power: f64,
    pub antenna_count: i32,
    pub bandwidth_mhz: f64,
    pub location: Location,
    pub cell_type: String,
    pub height_meters: f64,
    pub environment: String,
}

/// Geographic location
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct Location {
    pub latitude: f64,
    pub longitude: f64,
    pub altitude: f64,
}

/// Clustering configuration
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ClusteringConfig {
    pub algorithm: ClusteringAlgorithm,
    pub num_clusters: usize,
    pub eps: f64,
    pub min_samples: usize,
    pub auto_tune: bool,
    pub features: Vec<String>,
    pub distance_metric: String,
    pub normalize_features: bool,
    pub max_iterations: usize,
    pub convergence_threshold: f64,
}

/// Clustering algorithm options
#[derive(Debug, Clone, Serialize, Deserialize)]
pub enum ClusteringAlgorithm {
    KMeans,
    DBSCAN,
    Hierarchical,
    GaussianMixture,
    Spectral,
    Hybrid,
}

/// Clustering result
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ClusteringResult {
    pub session_id: String,
    pub clusters: Vec<Cluster>,
    pub profiles: Vec<CellProfile>,
    pub metrics: ClusteringMetrics,
    pub timestamp: DateTime<Utc>,
}

/// Individual cluster
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct Cluster {
    pub id: usize,
    pub name: String,
    pub behavior_pattern: String,
    pub cell_ids: Vec<String>,
    pub characteristics: ClusterCharacteristics,
    pub centroid: Vec<f64>,
    pub inertia: f64,
    pub size: usize,
    pub density: f64,
    pub silhouette_score: f64,
}

/// Cluster characteristics
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ClusterCharacteristics {
    pub primary_pattern: String,
    pub avg_utilization: f64,
    pub peak_utilization: f64,
    pub utilization_variance: f64,
    pub peak_hours: String,
    pub load_profile: String,
    pub predictability: f64,
    pub anomaly_level: String,
    pub dominant_patterns: Vec<String>,
}

/// Cell behavior profile
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct CellProfile {
    pub cell_id: String,
    pub cluster_id: usize,
    pub cluster_confidence: f64,
    pub behavior_type: String,
    pub typical_pattern: Vec<f64>,
    pub statistics: ProfileStatistics,
    pub anomalies: Vec<Anomaly>,
    pub recommendations: Vec<String>,
    pub last_updated: DateTime<Utc>,
}

/// Profile statistics
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ProfileStatistics {
    pub mean_utilization: f64,
    pub std_utilization: f64,
    pub min_utilization: f64,
    pub max_utilization: f64,
    pub median_utilization: f64,
    pub percentile_95: f64,
    pub trend_slope: f64,
    pub seasonality_strength: f64,
    pub autocorrelation: f64,
    pub coefficient_of_variation: f64,
}

/// Anomaly detection
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct Anomaly {
    pub timestamp: DateTime<Utc>,
    pub anomaly_type: String,
    pub severity: f64,
    pub description: String,
    pub confidence: f64,
    pub suggested_actions: Vec<String>,
}

/// Cluster insight
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ClusterInsight {
    pub cluster_id: usize,
    pub insight_type: String,
    pub title: String,
    pub description: String,
    pub confidence: f64,
    pub key_findings: Vec<String>,
    pub actionable_recommendations: Vec<String>,
    pub impact_level: String,
    pub urgency: String,
}

/// Update result
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct UpdateResult {
    pub status: String,
    pub message: String,
    pub cells_updated: usize,
    pub clusters_modified: usize,
}

/// Clustering metrics
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct ClusteringMetrics {
    pub silhouette_score: f64,
    pub calinski_harabasz_score: f64,
    pub davies_bouldin_score: f64,
    pub inertia: f64,
    pub num_clusters: usize,
    pub num_cells: usize,
    pub cluster_separation: f64,
    pub cluster_cohesion: f64,
    pub stability_score: f64,
    pub coverage: f64,
}

/// Feature vector for clustering
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct FeatureVector {
    pub cell_id: String,
    pub features: Vec<f64>,
    pub feature_names: Vec<String>,
    pub normalized: bool,
}

impl FeatureVector {
    /// Create feature vector from PRB utilization vector
    pub fn from_prb_vector(prb_vector: &PrbUtilizationVector) -> Result<Self> {
        let mut features = Vec::new();
        let mut feature_names = Vec::new();
        
        // Basic statistical features from hourly PRB utilization
        let prb_values = &prb_vector.hourly_prb_utilization;
        
        // Mean, std, min, max
        let mean = prb_values.iter().sum::<f64>() / prb_values.len() as f64;
        let variance = prb_values.iter().map(|x| (x - mean).powi(2)).sum::<f64>() / prb_values.len() as f64;
        let std = variance.sqrt();
        let min = prb_values.iter().copied().fold(f64::INFINITY, f64::min);
        let max = prb_values.iter().copied().fold(f64::NEG_INFINITY, f64::max);
        
        features.extend_from_slice(&[mean, std, min, max]);
        feature_names.extend_from_slice(&["mean", "std", "min", "max"]);
        
        // Peak hours analysis
        let peak_threshold = mean + std;
        let peak_hours: Vec<usize> = prb_values.iter().enumerate()
            .filter(|(_, &val)| val > peak_threshold)
            .map(|(i, _)| i)
            .collect();
        
        let morning_peak = peak_hours.iter().filter(|&&h| h >= 6 && h <= 10).count() as f64;
        let evening_peak = peak_hours.iter().filter(|&&h| h >= 17 && h <= 21).count() as f64;
        let night_peak = peak_hours.iter().filter(|&&h| h >= 22 || h <= 5).count() as f64;
        
        features.extend_from_slice(&[morning_peak, evening_peak, night_peak]);
        feature_names.extend_from_slice(&["morning_peak", "evening_peak", "night_peak"]);
        
        // Temporal pattern features
        let trend_slope = calculate_trend_slope(prb_values)?;
        let autocorr = calculate_autocorrelation(prb_values, 1)?;
        let seasonality = calculate_seasonality_strength(prb_values)?;
        
        features.extend_from_slice(&[trend_slope, autocorr, seasonality]);
        feature_names.extend_from_slice(&["trend_slope", "autocorr", "seasonality"]);
        
        // Cell metadata features
        let metadata = &prb_vector.metadata;
        let tech_numeric = match metadata.technology.as_str() {
            "5G" => 3.0,
            "LTE" => 2.0,
            "UMTS" => 1.0,
            _ => 0.0,
        };
        
        let cell_type_numeric = match metadata.cell_type.as_str() {
            "macro" => 4.0,
            "micro" => 3.0,
            "pico" => 2.0,
            "femto" => 1.0,
            _ => 0.0,
        };
        
        let env_numeric = match metadata.environment.as_str() {
            "urban" => 3.0,
            "suburban" => 2.0,
            "rural" => 1.0,
            _ => 0.0,
        };
        
        features.extend_from_slice(&[
            tech_numeric,
            metadata.tx_power,
            metadata.antenna_count as f64,
            metadata.bandwidth_mhz,
            cell_type_numeric,
            metadata.height_meters,
            env_numeric,
        ]);
        
        feature_names.extend_from_slice(&[
            "technology", "tx_power", "antenna_count", "bandwidth", 
            "cell_type", "height", "environment"
        ]);
        
        // Add additional features if present
        features.extend_from_slice(&prb_vector.additional_features);
        for i in 0..prb_vector.additional_features.len() {
            feature_names.push(format!("additional_{}", i));
        }
        
        Ok(Self {
            cell_id: prb_vector.cell_id.clone(),
            features,
            feature_names,
            normalized: false,
        })
    }
    
    /// Normalize features using z-score normalization
    pub fn normalize(&mut self) -> Result<()> {
        if self.normalized {
            return Ok(());
        }
        
        let mean = self.features.iter().sum::<f64>() / self.features.len() as f64;
        let variance = self.features.iter().map(|x| (x - mean).powi(2)).sum::<f64>() / self.features.len() as f64;
        let std = variance.sqrt();
        
        if std > 0.0 {
            for feature in &mut self.features {
                *feature = (*feature - mean) / std;
            }
        }
        
        self.normalized = true;
        Ok(())
    }
}

/// Calculate trend slope using linear regression
fn calculate_trend_slope(values: &[f64]) -> Result<f64> {
    if values.len() < 2 {
        return Ok(0.0);
    }
    
    let n = values.len() as f64;
    let x_mean = (n - 1.0) / 2.0;
    let y_mean = values.iter().sum::<f64>() / n;
    
    let numerator: f64 = values.iter().enumerate()
        .map(|(i, &y)| (i as f64 - x_mean) * (y - y_mean))
        .sum();
    
    let denominator: f64 = values.iter().enumerate()
        .map(|(i, _)| (i as f64 - x_mean).powi(2))
        .sum();
    
    if denominator == 0.0 {
        Ok(0.0)
    } else {
        Ok(numerator / denominator)
    }
}

/// Calculate autocorrelation at lag 1
fn calculate_autocorrelation(values: &[f64], lag: usize) -> Result<f64> {
    if values.len() <= lag {
        return Ok(0.0);
    }
    
    let mean = values.iter().sum::<f64>() / values.len() as f64;
    let variance = values.iter().map(|x| (x - mean).powi(2)).sum::<f64>() / values.len() as f64;
    
    if variance == 0.0 {
        return Ok(0.0);
    }
    
    let covariance = values.iter().take(values.len() - lag).enumerate()
        .map(|(i, &x)| (x - mean) * (values[i + lag] - mean))
        .sum::<f64>() / (values.len() - lag) as f64;
    
    Ok(covariance / variance)
}

/// Calculate seasonality strength
fn calculate_seasonality_strength(values: &[f64]) -> Result<f64> {
    if values.len() != 24 {
        return Ok(0.0);
    }
    
    // Simple seasonality measure based on hourly pattern consistency
    let mean = values.iter().sum::<f64>() / values.len() as f64;
    let variance = values.iter().map(|x| (x - mean).powi(2)).sum::<f64>() / values.len() as f64;
    
    if variance == 0.0 {
        return Ok(0.0);
    }
    
    // Calculate coefficient of variation as a proxy for seasonality
    Ok(variance.sqrt() / mean.abs())
}

impl Default for ClusteringConfig {
    fn default() -> Self {
        Self {
            algorithm: ClusteringAlgorithm::KMeans,
            num_clusters: 5,
            eps: 0.5,
            min_samples: 3,
            auto_tune: true,
            features: vec![
                "mean".to_string(),
                "std".to_string(),
                "morning_peak".to_string(),
                "evening_peak".to_string(),
                "trend_slope".to_string(),
            ],
            distance_metric: "euclidean".to_string(),
            normalize_features: true,
            max_iterations: 300,
            convergence_threshold: 1e-4,
        }
    }
}

#[cfg(test)]
mod tests {
    use super::*;
    
    #[test]
    fn test_feature_extraction() {
        let prb_vector = create_test_prb_vector();
        let feature_vector = FeatureVector::from_prb_vector(&prb_vector).unwrap();
        
        assert_eq!(feature_vector.cell_id, "test_cell_001");
        assert!(!feature_vector.features.is_empty());
        assert!(!feature_vector.feature_names.is_empty());
        assert_eq!(feature_vector.features.len(), feature_vector.feature_names.len());
    }
    
    #[test]
    fn test_trend_calculation() {
        let values = vec![1.0, 2.0, 3.0, 4.0, 5.0];
        let slope = calculate_trend_slope(&values).unwrap();
        assert!((slope - 1.0).abs() < 1e-10);
    }
    
    #[test]
    fn test_autocorrelation() {
        let values = vec![1.0, 2.0, 1.0, 2.0, 1.0, 2.0];
        let autocorr = calculate_autocorrelation(&values, 1).unwrap();
        assert!(autocorr < 0.0); // Negative correlation for alternating pattern
    }
    
    fn create_test_prb_vector() -> PrbUtilizationVector {
        PrbUtilizationVector {
            cell_id: "test_cell_001".to_string(),
            date: "2024-01-01".to_string(),
            hourly_prb_utilization: vec![
                20.0, 15.0, 10.0, 8.0, 12.0, 18.0, // 00-05: Night
                35.0, 55.0, 70.0, 80.0, 75.0, 65.0, // 06-11: Morning peak
                60.0, 58.0, 62.0, 65.0, 68.0, 72.0, // 12-17: Day
                85.0, 90.0, 88.0, 82.0, 45.0, 30.0, // 18-23: Evening peak
            ],
            metadata: CellMetadata {
                cell_id: "test_cell_001".to_string(),
                site_id: "site_001".to_string(),
                technology: "5G".to_string(),
                frequency_band: "n78".to_string(),
                tx_power: 43.0,
                antenna_count: 64,
                bandwidth_mhz: 100.0,
                location: Location {
                    latitude: 37.7749,
                    longitude: -122.4194,
                    altitude: 100.0,
                },
                cell_type: "macro".to_string(),
                height_meters: 30.0,
                environment: "urban".to_string(),
            },
            additional_features: vec![0.85, 0.92, 0.78], // RSRP, SINR, CQI
        }
    }
}